# Internship-Assessment-2025

./: README.md
Day2Servers/: README.md  pyproject.toml
Day2Servers/Assessment1/Assessment1/: asgi.py  settings.py  urls.py  wsgi.py
Day3-Django/: README.md  pyproject.toml
Day3-Django/Project/: settings.py  urls.py
Day3-Django/User/: models.py  serializers.py  urls.py  user_service.py  views.py
Day3-Django/User/migrations/: 0001_initial.py  0002_country_hobby_userprofile.py
Day3-linux-server/: README.md  daemon_process.py  (+3 more)
Day4-Django-advanced/: pyproject.toml  requirements.txt
Day4-Django-advanced/django-starter/: pyproject.toml  test_env.py
Day4-Django-advanced/django-starter/project/: celery.py  settings.py  urls.py
Day4-Django-advanced/django-starter/ramailo/: urls.py
Day4-Django-advanced/django-starter/ramailo/builders/: response_builder.py
Day4-Django-advanced/django-starter/stock/: admin.py  urls.py
Day4-Django-advanced/django-starter/stock/accessors/: stock_accessor.py
Day4-Django-advanced/django-starter/stock/models/: stock.py
Day4-Django-advanced/django-starter/stock/openapi/: schema.py
Day4-Django-advanced/django-starter/stock/serializers/: stock_serializer.py
Day4-Django-advanced/django-starter/user/: admin.py  error_handling.py  urls.py
Day4-Django-advanced/stocksimulator/: test.py  utils.py
Day4-Django-advanced/stocksimulator/stocks/: models.py  schema.py  serializers.py  stock_prices.csv  urls.py  views.py
Day4-Django-advanced/stocksimulator/stocksimulator/: asgi.py  settings.py  swagger_views.py  urls.py  wsgi.py
(+42 files in other folders)
