[project]
name = "day2servers"
version = "0.1.0"
description = ""
authors = [
    {name = "Ranjanlamsal",email = "Ranjan@ramailo.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
